--- a/index.html
+++ b/index.html
@@ -14,16 +14,6 @@
    
 <style>
 
-@font-face {
-  font-family: 'MyCustomFont';  
-  src: url('https://files.catbox.moe/o17bhh.ttf') format('truetype');
-  font-display: swap;
-}
-@font-face {
-  font-family: 'MyDiaryFont';
-  src: url('https://files.catbox.moe/nlu6ea.ttf') format('truetype');
-  font-display: swap;
-}
 :root {
     --wechat-green: #07c160;
     --phone-width: 410px;
@@ -110,7 +100,6 @@ body.dark-mode, #phone-screen.dark-mode {
     align-items: center;
     opacity: 0;
     transition: opacity 0.4s ease-in-out;
-    font-family: 'MyDiaryFont', sans-serif;
     z-index: 150;
 }
 
@@ -385,7 +374,7 @@ body.dark-mode, #phone-screen.dark-mode {
 .transfer-footer { padding: 6px 12px; font-size: 12px; color: white; border-top: 1px solid rgba(255, 255, 255, 0.1); }
 .message-bubble.user .content.transfer-content { background-color: #F8A94A; color: white; }
 .message-bubble.ai .content.transfer-content { color: white; }
-.chat-messages.offline-mode { padding-left: 0; padding-right: 0; background-color: #ffffff; color: #3b2f2f; padding-top: 40px; font-family: 'MyCustomFont', serif; }
+.chat-messages.offline-mode { padding-left: 0; padding-right: 0; background-color: #ffffff; color: #3b2f2f; padding-top: 40px; }
 .chat-messages.offline-mode .message-wrapper { flex-direction: column; align-items: center; gap: 0; max-width: 100%; padding: 8px 0; }
 .chat-messages.offline-mode .message-wrapper .avatar { width: 100%; height: 70px; border-radius: 0; object-fit: cover; margin-bottom: 20px; }
 .chat-messages.offline-mode .message-bubble { width: 85%; max-width: 500px; font-size: 16px; line-height: 1.7; padding: 0; box-sizing: border-box; }
